# rusty-8

./: Cargo.toml  LICENSE  README.md
roms/: test2.ch8
src/: dis.rs  display.rs  lib.rs  main.rs
